# db-storage

./: pyproject.toml  run.py
fileshare/: __init__.py  models.py
fileshare/static/: main.css
fileshare/templates/: home.html
